--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.testng:testng:7.8.0'
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
